--- a/Website/Website/Website/Website.csproj
+++ b/Website/Website/Website/Website.csproj
@@ -200,6 +200,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\AboutController.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
     <Compile Include="Areas\Admin\Controllers\BusinessController.cs" />
     <Compile Include="Areas\Admin\Controllers\CategoryController.cs" />
@@ -213,6 +214,7 @@
     <Compile Include="Areas\Admin\Controllers\PermissionController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserController.cs" />
     <Compile Include="Areas\Admin\Models\AuthorizeBusiness.cs" />
+    <Compile Include="Areas\Admin\Models\ClientCategoryViewModel.cs" />
     <Compile Include="Areas\Admin\Models\ClientMenuViewModel.cs" />
     <Compile Include="Areas\Admin\Models\GroupUserGrand.cs" />
     <Compile Include="Areas\Admin\Models\LoginModel.cs" />
@@ -226,6 +228,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Hepper.cs" />
+    <Compile Include="Models\CategoryViewModel.cs" />
     <Compile Include="Models\UserLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -248,6 +251,9 @@
     <Content Include="Areas\Admin\Views\Home\NotiAuthorize.cshtml" />
     <Content Include="Areas\Admin\Views\Category\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Category\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Category\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Category\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\About\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -270,6 +276,7 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Shared\_WebLayout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\MenuPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -287,7 +294,7 @@
     <Folder Include="Content\Admin\plugins\" />
     <Folder Include="Content\Client\css\" />
     <Folder Include="Content\Client\images\" />
-    <Folder Include="Content\Client\js\" />
+    <Folder Include="Content\Client\js\controller\" />
     <Folder Include="Content\Client\webfonts\" />
   </ItemGroup>
   <ItemGroup>
