Tạo xong trang quản trị liên kết quảng cáo, số thống kê

--- a/Website/Website/DBModel/DBModel.csproj
+++ b/Website/Website/DBModel/DBModel.csproj
@@ -61,6 +61,8 @@
   <ItemGroup>
     <Compile Include="DAO\NewsDao.cs" />
     <Compile Include="DAO\AboutDao.cs" />
+    <Compile Include="DAO\AdvertiseDao.cs" />
+    <Compile Include="DAO\StatsInfoDao.cs" />
     <Compile Include="DAO\SideDao.cs" />
     <Compile Include="DAO\FooterDao.cs" />
     <Compile Include="DAO\GroupDao.cs" />
