Xong chức năng footer

--- a/Website/Website/DBModel/DBModel.csproj
+++ b/Website/Website/DBModel/DBModel.csproj
@@ -62,6 +62,7 @@
     <Compile Include="DAO\NewsDao.cs" />
     <Compile Include="DAO\AboutDao.cs" />
     <Compile Include="DAO\AdvertiseDao.cs" />
+    <Compile Include="DAO\TeacherDao.cs" />
     <Compile Include="DAO\StatsInfoDao.cs" />
     <Compile Include="DAO\SideDao.cs" />
     <Compile Include="DAO\FooterDao.cs" />
