--- a/Website/Website/Website/Website.csproj
+++ b/Website/Website/Website/Website.csproj
@@ -281,6 +281,9 @@
     <Content Include="Areas\Admin\Views\Advertise\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Advertise\Create.cshtml" />
     <Content Include="Areas\Admin\Views\Advertise\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Footer\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Footer\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Footer\Edit.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
