--- a/Website/Website/Website/Website.csproj
+++ b/Website/Website/Website/Website.csproj
@@ -236,6 +236,7 @@
     <Compile Include="Areas\Admin\Models\ProjectMember.cs" />
     <Compile Include="Areas\Admin\Models\ReflectionController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\NewsDTController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -248,6 +249,10 @@
   <ItemGroup>
     <Content Include="Content\Admin\dist\img\logo.png" />
     <Content Include="Content\PagedList.css" />
+    <Content Include="Data\images\c1.jpg" />
+    <Content Include="Data\images\c2.jpg" />
+    <Content Include="Data\images\c3.jpg" />
+    <Content Include="Data\images\c4.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -314,6 +319,14 @@
     <Content Include="Views\Shared\MenuPartial.cshtml" />
     <Content Include="Views\Shared\HeaderPartial.cshtml" />
     <Content Include="Views\Shared\FooterPartial.cshtml" />
+    <Content Include="Views\Shared\_WebNewsLayout.cshtml" />
+    <Content Include="Views\NewsDT\Category.cshtml" />
+    <Content Include="Views\Shared\TagsPartial.cshtml" />
+    <Content Include="Views\Shared\EventsPartial.cshtml" />
+    <Content Include="Views\Shared\CategoryPartial.cshtml" />
+    <Content Include="Views\NewsDT\Detail.cshtml" />
+    <Content Include="Views\NewsDT\Tag.cshtml" />
+    <Content Include="Views\NewsDT\DetailTag.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
