--- a/Public/Web.config
+++ b/Public/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-     <add name="DBContext" connectionString="data source=bon59232_bonal;initial catalog=bon59_THPT;persist security info=True;user id=bon59_THPT;password=bon59_THPT@123*&!;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DBContext" connectionString="data source=.;initial catalog=THPTNgoQuyen;persist security info=True;user id=sa;password=1234567;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
