Sửa load trang tin thức lỗi

--- a/Web.config
+++ b/Web.config
@@ -19,7 +19,8 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation debug="false" targetFramework="4.5.2" />
+	 <customErrors mode="Off"/>
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
@@ -94,5 +95,3 @@
     </compilers>
   </system.codedom>
 </configuration>
-MB1479011
-Phong@123
