--- a/Web.config
+++ b/Web.config
@@ -20,7 +20,9 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="false" targetFramework="4.5.2" />
-	 <customErrors mode="Off"/>
+	  <customErrors mode="On" defaultRedirect="/Home/message">
+      <error statusCode="403" redirect="/Error/NoPermissions"/>
+    </customErrors>
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
